# hub-EBYi

赵冬昆/第十六周/Werewolf-test/ai-werewolf/: PROJECT_STRUCTURE.md  cli.py  demo_leaderboard.json  demo_leaderboard_report.json  demo_metrics.json  example.py  example_evaluation.py  example_qwen.py  pyproject.toml  requirements.txt
赵冬昆/第十六周/Werewolf-test/ai-werewolf/agent/core/: base_agent.py
赵冬昆/第十六周/Werewolf-test/ai-werewolf/agent/evolution/: self_evolution.py
赵冬昆/第十六周/Werewolf-test/ai-werewolf/agent/llm/: qwen_client.py
赵冬昆/第十六周/Werewolf-test/ai-werewolf/agent/prompts/: __init__.py  template_loader.py
赵冬昆/第十六周/Werewolf-test/ai-werewolf/agent/strategies/: __init__.py  base_strategy.py  simple_strategy.py
赵冬昆/第十六周/Werewolf-test/ai-werewolf/api/: server.py
赵冬昆/第十六周/Werewolf-test/ai-werewolf/configs/: game_configs.py
赵冬昆/第十六周/Werewolf-test/ai-werewolf/demo_evolution/: agent_0_evolution.json
赵冬昆/第十六周/Werewolf-test/ai-werewolf/engine/: game_manager.py  state_machine.py  types.py
赵冬昆/第十六周/Werewolf-test/ai-werewolf/engine/plugins/: __init__.py  base_role.py  hunter.py  seer.py  villager.py  werewolf.py  witch.py
赵冬昆/第十六周/Werewolf-test/ai-werewolf/engine/rules/: win_conditions.py
赵冬昆/第十六周/Werewolf-test/ai-werewolf/evaluation/: api.py  leaderboard.py  metrics.py  replay_analyzer.py
赵冬昆/第十六周/Werewolf-test/ai-werewolf/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
赵冬昆/第十六周/Werewolf-test/ai-werewolf/frontend/src/: App.vue  style.css
赵冬昆/第十六周/Werewolf-test/ai-werewolf/tests/: test_game_manager.py  test_role_plugins.py
(+762 files in other folders)
