[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-werewolf"
version = "1.0.0"
description = "Multi-agent Werewolf Game with LLM"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "requests>=2.30.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
    "langchain>=0.1.0",
    "python-state-machine>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
